added header, main, h3, 2 paragraphs & ext. css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CSS</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>Creating a CSS file</header>
+    <main>
+      <h3>CSS is Awesome!</h3>
+      <p>CSS is the best because it is what makes everything look cool.</p>
+      <p>You can change colors, font, position etc with CSS!</p>
+    </main>
+  </body>
 </html>
