added ext. html & created form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <header>Creating a CSS file</header>
@@ -23,6 +24,7 @@
           >Click here to learn more about CSS</a
         >
       </div>
+      <a href="./form.html">Click here to fill out questionaire</a>
     </main>
   </body>
 </html>
