added back to home button in form.html

--- a/form.html
+++ b/form.html
@@ -32,5 +32,6 @@
       <label for="javascript">Burger</label> <br />
       <button>Submit</button>
     </form>
+    <button><a href="./index.html">Back to Home</a></button>
   </body>
 </html>
