added checkbox to form

--- a/form.html
+++ b/form.html
@@ -30,6 +30,27 @@
 
       <input type="radio" id="burger" name="favorite" value="burger" required />
       <label for="javascript">Burger</label> <br />
+
+      <label for="fav_color">Favorite color(s)</label required> <br />
+
+      <input type="checkbox" id="blue" name="blue" value="blue" />
+      <label for="fav_color"> Blue</label><br />
+
+      <input type="checkbox" id="green" name="green" value="green"  />
+      <label for="fav_color">Green</label><br />
+
+      <input type="checkbox" id="pink" name="pink" value="pink"  />
+      <label for="fav_color">Pink</label> <br />
+
+      <input
+        type="checkbox"
+        id="purple"
+        name="purple"
+        value="purple"
+        
+      />
+      <label for="fav_color">Purple</label> <br>
+
       <button>Submit</button>
     </form>
     <button><a href="./index.html">Back to Home</a></button>
